# sonegx-video-editor

./: CMakeLists.txt  Main.qml  QML_FILES_RC.qrc  main.cpp
src/: ItemProperties.qml  main.cpp
src/qml/: Main.qml
src/qml/Elements/: CircleElement.qml
src/qml/Views/: InteractionElements.qml  ItemProperties.qml  VideoPlayer.qml
